cmake_minimum_required(VERSION 3.22.2)
project(MnogofileProject)
add_executable(Geometry mnogofileungle3/Source.cpp 
mnogofileungle3/Figure.cpp 
mnogofileungle3/Triangle.cpp 
mnogofileungle3/EquilaterialTriangle.cpp 
mnogofileungle3/RightangeledTriangle.cpp
mnogofileungle3/IsoscelesTriangle.cpp
mnogofileungle3/Quadrilateral.cpp
mnogofileungle3/Rectangle.cpp
mnogofileungle3/Square.cpp
mnogofileungle3/Parallelogram.cpp
mnogofileungle3/Rhomb.cpp
)